--- a/pom.xml
+++ b/pom.xml
@@ -108,12 +108,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- hutool -->
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-core -->
         <dependency>
             <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.5.9</version>
+            <artifactId>hutool-core</artifactId>
+            <version>5.8.4</version>
         </dependency>
+
     </dependencies>
 
     <build>
