--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
     format:
       date: yyyy-MM-dd
       date-time: yyyy-MM-dd HH:mm:ss
